src/gadgets/vector-styles/MediaWiki:Gadget-vector-styles.css
/*
 * 放置于这里的CSS将应用于Vector皮肤
 * 请尊重萌娘百科版权，以下代码除非注明均是管理员手敲出来的！！！复制需要注明源自萌娘百科，并且附上URL地址 https://zh.moegirl.org.cn/MediaWiki:Gadget-vector-styles.css
 * 版权协定：知识共享 署名-非商业性使用-相同方式共享 3.0
 * 复制之后请把图片换成自己网站上URL地址！
 */

/* 2023春季topbar */
body.skin-vector {
    background: url("https://img.moegirl.org.cn/topbar/zhMoegirl_2022Spring.jpg") no-repeat top left #F6F6F6;
}

/* 侧边栏、顶部栏 */
#content {
    position: relative;
    z-index: 7;
}

#mw-navigation div.vectorMenu div.menu {
    z-index: 9;
}

#mw-panel #p-logo {
    width: 176px;
    height: 300px;
    margin-left: -0.5em;
}

#mw-panel #p-logo .mw-wiki-logo {
    background-image: none;
    width: 176px;
    height: 300px;
}

div#mw-page-base {
    background: none;
    height: 100px;
}

#left-navigation,
#right-navigation {
    margin-top: 60px;
    min-height: 40px;
}

div#mw-panel {
    top: 0;
    text-shadow: 1px 1px #F6F6F6;
}

div#mw-panel div.portal {
    padding-bottom: 1em;
}

div#mw-head div.vectorMenu h4 {
    height: 1.9em;
    margin-bottom: 0;
    padding-top: 1.25em;
    padding-bottom: 0;
    padding-right: 0.5em;
}

/* 提升背景颜色纯度 */
div.vectorTabs ul li,
#mw-head div.vectorMenu {
    background-image: none !important;
    background-color: transparent !important;
}

div.vectorTabs,
div.vectorTabs span,
div.vectorTabs ul,
div#mw-head div.vectorMenu h3 {
    background-image: none !important;
}

/* #left-navigation,
#right-navigation {
    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, .5) 30%, rgba(255, 255, 255, .75))!important;
    background-color: transparent!important;
} */

#left-navigation,
#right-navigation,
div.vectorTabs ul li.selected {
    background-image: linear-gradient(rgb(255 255 255 / 0%), rgb(255 255 255 / 30%) 30%, rgb(255 255 255 / 50%)) !important;
    background-color: transparent !important;
}

/* 右上个人链接栏 */
div#p-personal {
    background-color: rgb(255 255 255 / 80%);
    padding: 5px 10px 5px 0;
    box-shadow: #666 0 1px 5px;
}

/* 右上通知处奇怪的数字移除 */
#pt-notifications-alert .mw-echo-notifications-badge,
#pt-notifications-notice .mw-echo-notifications-badge {
    text-indent: -99999px;
}

#pt-notifications-alert .mw-echo-notifications-badge::after,
#pt-notifications-notice .mw-echo-notifications-badge::after {
    text-indent: 0;
}

/* MW自带10em宽度，应该是留给测试链接的吧萌百没有就去掉 */
#p-personal ul {
    padding-left: 0;
}

/* 调整侧边栏字体 */
div#mw-panel {
    font-size: 18px;

    /* mw-panel的宽度是10em，改了font-size以后也需要修改一下 */
    width: 10.5rem;
}

/* 页脚 */
#footer-info-copyright {
    background: url("//img.moegirl.org.cn/weixin_mengbai.png") 0 15px no-repeat;
    padding: 15px 0 30px;
    font-family: sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    min-height: 165px;
}

#footer-moegirl {
    padding-left: 160px;
    color: #2F2F2F;
}

#footer-moegirl h4 {
    color: #243C4A;
    font-family: AllerBold, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
    margin-bottom: 8px;
}

#footer-moegirl ul {
    float: left;
    margin: 0 100px 20px 0;
    line-height: 1.7;
    width: 120px;
    font-size: 12pt;
}

#footer-moegirl ul.lastlist {
    margin-right: 0;
}

#footer-moegirl ul a {
    color: #2F2F2F;
}

#footer-moegirl .copyright {
    clear: left;
    display: block;
    line-height: 1.3;
    color: #999;
}

/* 标题下划线增强 700 = bold */
h1 {
    font-weight: 700;
    border-bottom: 2px solid #0074F9;
}

h2 {
    font-weight: 700;
    border-bottom: 1px solid #0074F9;
}

/* 名字空间改变背景色 */
.ns-0 div#content,
.ns-0 div#p-cactions li a:hover,
.ns-0 div#p-cactions li.selected a {
    background-color: rgb(255 255 255 / 80%);
}

div#content,
div#p-cactions li a:hover,
div#p-cactions li.selected a {
    background-color: rgb(247 251 255 / 80%);
}

/* vectorMenu 的排序 */
div.vectorMenu ul {
    display: flex;
    flex-flow: column;
}

/* 仅手机版显示支持 */
.mobile-only,
.mobileonly {
    display: none !important;
}

